# minor-projects

./: .gitignore  README.md
Cameo-cpp/: Makefile  README.md  cameo.cpp  cameo.hpp  main.cpp
Cameo-py/: README.md  cameo.py  filters.py  managers.py
NutFlow/: CMakeLists.txt  README.md  run.sh
NutFlow/src/app/app/: main.cpp
NutFlow/src/detector/: CMakeLists.txt
NutFlow/src/detector/detector/: detector.cpp  detector.hpp
bookstore/: CMakeLists.txt  README.md
bookstore/cmake/: CompileOptions.cmake
bookstore/src/: CMakeLists.txt
bookstore/src/app/: CMakeLists.txt
bookstore/src/app/app/: main.cpp
bookstore/src/libbook/: CMakeLists.txt
bookstore/src/libbook/libbook/: Book.cpp  Book.hpp
bookstore/src/libstore/: CMakeLists.txt
bookstore/src/libstore/libstore/: BookStore.cpp  BookStore.hpp
bookstore/test/test/: CMakeLists.txt  test.cpp
cache/: .clang-tidy  CMakeLists.txt  data1.txt
cache/cmake/: CompileOptions.cmake
cache/src/: CMakeLists.txt
cache/src/app/: CMakeLists.txt  main.cpp
cache/src/cache/: CMakeLists.txt  cache.hpp
cache/test/: CMakeLists.txt  test.cpp
caches/: README.md
gauss-determinant-mpi/: README.md
gauss-determinant-mpi/src/: main.c
nut-flow/: .gitignore  README.md  run.sh
nut-flow/cmake/: CompileOptions.cmake
nut-flow/src/: CMakeLists.txt
nut-flow/src/app/: CMakeLists.txt
nut-flow/src/detector/detector/: detector.hpp
smart-pointers/: CMakeLists.txt  README.md
smart-pointers/cmake/: CompileOptions.cmake
smart-pointers/src/: CMakeLists.txt
smart-pointers/src/include/: smart_pointers.hpp
smart-pointers/src/src/: main.cpp
smart-pointers/test/: CMakeLists.txt
smart-pointers/test/test/: test.cpp
soundex/: CMakeLists.txt  README.md
soundex/src/: CMakeLists.txt
soundex/src/app/: CMakeLists.txt  main.cpp
soundex/src/soundex/: CMakeLists.txt  soundex.cpp  soundex.hpp
soundex/test/: CMakeLists.txt
soundex/test/soundex/: CMakeLists.txt  test.cpp
tcp-server/: README.md
time_t/: CMakeLists.txt  README.md
time_t/src/: CMakeLists.txt
time_t/src/libcsc/libcsc/: time.h
time_t/src/time-cli/: CMakeLists.txt
time_t/src/time-cli/time-cli/: main.cpp
time_t/test/: CMakeLists.txt
time_t/test/libcsc/: CMakeLists.txt
time_t/test/libcsc/libcsc/: test.cpp
